--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,10 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_name">Name must be >5 characters</string>
     <string name="invalid_password">Password must be >5 characters</string>
+    <string name="invalid_password_confirm">No coinciden ambos passwords </string>
+
     <string name="login_failed">"Login failed"</string>
     <string name="name">Nombre</string>
 </resources>
